[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "raspunzel"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "colorama",
]

[project.optional-dependencies]
doc = ["sphinx"]

[project.scripts]
raspunzel = "raspunzel:main"

[project.urls]
Documentation = "https://tasts-robots.org/doc/raspunzel/"
Source = "https://github.com/tasts-robots/raspunzel"
Tracker = "https://github.com/tasts-robots/raspunzel/issues"
Changelog = "https://github.com/tasts-robots/raspunzel/blob/master/CHANGELOG.md"

[tool.black]
line-length = 79
